@@ -1,5 +1,6 @@
 package com.duckie.backend.config;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.context.annotation.Bean;
@@ -30,7 +31,7 @@ import lombok.RequiredArgsConstructor;
 @EnableMethodSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
-    
+
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
     private final CustomAccessDeniedHandler customAccessDeniedHandler;
@@ -38,35 +39,37 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(csrf -> csrf.disable())
-            .cors(Customizer.withDefaults())
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/public/**", "/api/auth/**", "/error").permitAll()
-                .requestMatchers("/h2-console/**").permitAll()
-                .requestMatchers("/api/recruiter/**").hasAnyRole("RECRUITER", "ADMIN")
-                .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                .requestMatchers("/api/users/**").authenticated()
-                .requestMatchers("/api/job-templates/**").hasRole("ADMIN")
-                .requestMatchers("/api/email-templates/**").hasAnyRole("ADMIN", "HIRING_MANAGER", "RECRUITER")
-                .requestMatchers("/api/admin/dashboard").hasRole("ADMIN")
-                .requestMatchers("/api/reports/**").hasRole("RECRUITER")
-                .requestMatchers("/api/email-logs/**").hasAnyRole("RECRUITER", "ADMIN", "HIRING_MANAGER")
-                .requestMatchers("/api/emails/send").hasAnyRole("RECRUITER", "ADMIN")
-                .requestMatchers("/api/email-templates/**").hasAnyRole("ADMIN", "HIRING_MANAGER", "RECRUITER")
-                .requestMatchers("/api/jobs/**").hasAnyRole("ADMIN", "HIRING_MANAGER", "RECRUITER")
-                .requestMatchers("/api/cvs/upload").hasAnyRole("ADMIN", "RECRUITER")
-                .requestMatchers("/api/applications/**").hasAnyRole("ADMIN", "HIRING_MANAGER", "RECRUITER")
-                .requestMatchers("/api/ai-config/**").hasRole("ADMIN")
-                .requestMatchers("/api/evaluations/**").hasAnyRole("HIRING_MANAGER", "ADMIN")
-                .anyRequest().authenticated()
-            )
-            .exceptionHandling(exceptions -> exceptions
-                .authenticationEntryPoint(jwtAuthenticationEntryPoint)
-                .accessDeniedHandler(customAccessDeniedHandler))
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                .csrf(csrf -> csrf.disable())
+                .cors(Customizer.withDefaults())
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/public/**", "/api/auth/**", "/error", "/h2-console/**").permitAll()
 
-        http.headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()));
+                        .requestMatchers("/api/recruiter/**").hasAnyRole("RECRUITER", "ADMIN")
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers("/api/users/**").hasAnyRole("USER", "ADMIN")
+                        .requestMatchers("/api/job-templates/**").hasRole("ADMIN")
+                        .requestMatchers("/api/admin/dashboard").hasRole("ADMIN")
+                        .requestMatchers("/api/ai-config/**").hasRole("ADMIN")
+
+                        .requestMatchers("/api/reports/**").hasRole("RECRUITER")
+                        .requestMatchers("/api/email-logs/**").hasAnyRole("RECRUITER", "ADMIN", "HIRING_MANAGER")
+                        .requestMatchers("/api/emails/send").hasAnyRole("RECRUITER", "ADMIN")
+                        .requestMatchers("/api/email-templates/**").hasAnyRole("ADMIN", "HIRING_MANAGER", "RECRUITER")
+                        .requestMatchers("/api/jobs/**").hasAnyRole("ADMIN", "HIRING_MANAGER", "RECRUITER")
+                        .requestMatchers("/api/cvs/upload").hasAnyRole("ADMIN", "RECRUITER")
+                        .requestMatchers("/api/applications/**").hasAnyRole("ADMIN", "HIRING_MANAGER", "RECRUITER")
+                        .requestMatchers("/api/evaluations/**").hasAnyRole("HIRING_MANAGER", "ADMIN")
+
+                        .anyRequest().authenticated()
+                )
+                .exceptionHandling(exceptions -> exceptions
+                        .authenticationEntryPoint(jwtAuthenticationEntryPoint)
+                        .accessDeniedHandler(customAccessDeniedHandler))
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+
+        // Cho phép hiển thị H2 console trong iframe
+        http.headers(headers -> headers.frameOptions(frame -> frame.disable()));
 
         return http.build();
     }
@@ -74,21 +77,21 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173")); 
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost"));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "x-auth-token"));
-        configuration.setAllowCredentials(true); 
-        
+        configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); 
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-    
+
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-    
+
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
